Trying again, also streamlining build process

--- a/.github/workflows/uufsolver.yml
+++ b/.github/workflows/uufsolver.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - sample-app-github-cd
+name: Build and deploy Python app to Azure Web App - UUFSolver
 
 on:
   push:
