Some fixes for build

--- a/.github/workflows/uufsolver.yml
+++ b/.github/workflows/uufsolver.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
+          deactivate
+          tar -czf venv.tar.gz venv
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
