--- a/.github/workflows/uufsolver.yml
+++ b/.github/workflows/uufsolver.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+          python.exe -m pip install --upgrade pip
           pip install --upgrade pip
           pip install -r requirements.txt
           deactivate
