--- a/.github/workflows/uufsolver.yml
+++ b/.github/workflows/uufsolver.yml
@@ -22,11 +22,17 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true          
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-          python.exe -m pip install --upgrade pip
           pip install --upgrade pip
           pip install -r requirements.txt
           deactivate
