--- a/.github/workflows/linux-test-deploy.yml
+++ b/.github/workflows/linux-test-deploy.yml
@@ -50,5 +50,4 @@ jobs:
         source venv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-        python app.py  # Replace with your actual start command
+        start.sh  # Replace with your actual start command
