--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "@fluentui/react": "^8.105.3",
     "@fluentui/react-hooks": "^8.6.29",
     "@fluentui/react-icons": "^2.0.195",
+    "detect-browser-language": "^0.0.2",
     "dompurify": "^3.0.8",
+    "franc": "^6.2.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "plotly.js": "^2.32.0",
@@ -38,6 +40,7 @@
     "@eslint/js": "^9.1.1",
     "@types/dompurify": "^3.0.5",
     "@types/eslint-config-prettier": "^6.11.3",
+    "@types/franc": "^5.0.3",
     "@types/jest": "^29.5.12",
     "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.6",
