--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,14 @@
       "module": "quart",
       "cwd": "${workspaceFolder}",
       "env": {
-          "QUART_APP": "app:app",
-          "QUART_ENV": "development",
-          "QUART_DEBUG": "0"
+        "QUART_APP": "app:app",
+        "QUART_ENV": "development",
+        "QUART_DEBUG": "0"
       },
       "args": [
-          "run",
-          "--no-reload",
-          "-p 50505"
+        "run",
+        "--no-reload",
+        "-p 50505"
       ],
       "console": "integratedTerminal",
       "justMyCode": false
@@ -27,6 +27,21 @@
       "url": "http://127.0.0.1:50505",
       "webRoot": "${workspaceFolder}/frontend",
       "smartStep": true
+    },
+    {
+      "name": "Docker: Python - General",
+      "type": "docker",
+      "request": "launch",
+      "preLaunchTask": "docker-run: debug",
+      "python": {
+        "pathMappings": [
+          {
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "/app"
+          }
+        ],
+        "projectType": "general"
+      }
     }
   ]
 }
