--- a/.env.sample
+++ b/.env.sample
@@ -119,10 +119,13 @@ PROMPTFLOW_REQUEST_FIELD_NAME=query
 PROMPTFLOW_RESPONSE_FIELD_NAME=reply
 PROMPTFLOW_CITATIONS_FIELD_NAME=documents
 # Chat with data: MongoDB database
-MONGODB_CONNECTION_STRING=
+MONGODB_ENDPOINT=
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
 MONGODB_DATABASE_NAME=
-MONGODB_CONTAINER_NAME=
-MONGODB_VECTOR_INDEX=
+MONGODB_COLLECTION_NAME=
+MONGODB_APP_NAME=
+MONGODB_INDEX_NAME=
 MONGODB_TOP_K=
 MONGODB_STRICTNESS=
 MONGODB_ENABLE_IN_DOMAIN=
