--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
     - main
+    - develop
 
 jobs:
 
@@ -15,5 +16,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run:         
-        docker build . --file WebApp.Dockerfile --tag sampleappaoaichatgpt.azurecr.io/sample-app-aoai-chatgpt:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
-      
+        docker build . --file WebApp.Dockerfile --tag crjekadeveus.azurecr.io/theochat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
