--- a/.github/workflows/docker-image-publish.yml
+++ b/.github/workflows/docker-image-publish.yml
@@ -11,22 +11,26 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+      contents: read
+
     steps:
-    - name: Azure Container Registry Login
-      uses: Azure/docker-login@v2
+    - name: 'Az CLI login'
+      uses: azure/login@v1
       with:
-        # Container registry username
-        username: ${{ secrets.SAMPLEAPP_ACR_USERNAME }}
-        # Container registry password
-        password: ${{ secrets.SAMPLEAPP_ACR_PASSWORD }}
-        # Container registry server url
-        login-server: sampleappaoaichatgpt.azurecr.io
-        
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+    - name: 'ACR login'
+      run: |
+        az acr login --name crjekadeveus
+
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run:         
-        docker build . --file WebApp.Dockerfile --tag sampleappaoaichatgpt.azurecr.io/sample-app-aoai-chatgpt:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER;
-        docker tag sampleappaoaichatgpt.azurecr.io/sample-app-aoai-chatgpt:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER sampleappaoaichatgpt.azurecr.io/sample-app-aoai-chatgpt:latest;
-        docker push sampleappaoaichatgpt.azurecr.io/sample-app-aoai-chatgpt:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER;
-        docker push sampleappaoaichatgpt.azurecr.io/sample-app-aoai-chatgpt:latest;
-      
+      run: |
+        docker build . --file WebApp.Dockerfile --tag crjekadeveus.azurecr.io/theo-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
+        docker tag crjekadeveus.azurecr.io/theo-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER crjekadeveus.azurecr.io/theo-chat:latest
+        docker push crjekadeveus.azurecr.io/theo-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
+        docker push crjekadeveus.azurecr.io/theo-chat:latest
