Add conversation ID header to API call

--- a/.env.sample
+++ b/.env.sample
@@ -118,3 +118,4 @@ PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=query
 PROMPTFLOW_RESPONSE_FIELD_NAME=reply
 PROMPTFLOW_CITATIONS_FIELD_NAME=documents
+CONVERSATION_ID_HEADER="12345"
