--- a/.github/workflows/docker-image-publish-develop.yml
+++ b/.github/workflows/docker-image-publish-develop.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        docker build . --file WebApp.Dockerfile --tag crjekadeveus.azurecr.io/theo-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
-        docker tag crjekadeveus.azurecr.io/theo-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER crjekadeveus.azurecr.io/theo-chat:develop
-        docker push crjekadeveus.azurecr.io/theo-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
-        docker push crjekadeveus.azurecr.io/theo-chat:develop
+        docker build . --file WebApp.Dockerfile --tag crjekadeveus.azurecr.io/daisy-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
+        docker tag crjekadeveus.azurecr.io/daisy-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER crjekadeveus.azurecr.io/daisy-chat:develop
+        docker push crjekadeveus.azurecr.io/daisy-chat:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
+        docker push crjekadeveus.azurecr.io/daisy-chat:develop
