--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,10 +4,7 @@
 name: Python application
 
 on:
-  push:
-    branches: [ "disabled" ]
-  pull_request:
-    branches: [ "disabled" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
