Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_starlight-chat-assistant.yml
+++ b/.github/workflows/main_starlight-chat-assistant.yml
@@ -49,7 +49,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -60,10 +62,17 @@ jobs:
         run: unzip release.zip
 
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_42040DB2CA9B45EDAF05BE44A26DA845 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_58E6697D4844423FBB3F6685E1F5DA23 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1B405CD7D60B4EE2B67D29A71799D75B }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'Starlight-Chat-Assistant'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4086DD334BFD44D5B699858E3ABD9D50 }}
+          
