Add the ability to upload .docx files to the NJ AI Assistant (#21)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build --mode development",
     "watch": "tsc && vite build --watch",
-    "test": "jest",
+    "test:api": "jest src/api",
+    "test:react": "jest src/components",
     "lint": "npx eslint src",
     "lint:fix": "npx eslint --fix",
     "prettier": "npx prettier src --check",
@@ -19,9 +20,13 @@
     "@fluentui/react-hooks": "^8.6.29",
     "@fluentui/react-icons": "^2.0.195",
     "@newjersey/feedback-widget": "^0.6.0",
+    "@testing-library/user-event": "^14.5.2",
     "dompurify": "^3.0.8",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-axe": "^9.0.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "mammoth": "^1.8.0",
     "plotly.js": "^2.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,9 +43,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/dompurify": "^3.0.5",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "^29.5.12",
+    "@types/jest-axe": "^3.5.9",
     "@types/lodash-es": "^4.17.12",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.7",
@@ -63,6 +72,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "globals": "^15.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "react-test-renderer": "^18.2.0",
