chore: update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,32 @@
 .venv
 frontend/node_modules
 .env
-# static
+/static/
 .azure/
 __pycache__/
 .ipynb_checkpoints/
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+.nx/
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
