--- a/.github/workflows/sample-app-github-cd.yml
+++ b/.github/workflows/sample-app-github-cd.yml
@@ -67,6 +67,8 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          environment: "AzureCloud"
+          allow-no-subscriptions: true
 
       - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v2
