workflow fix 4: build of docker-image in anderen Login-server

--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -14,8 +14,10 @@ jobs:
       - name: Azure Container Registry Login
         uses: Azure/docker-login@v2
         with:
-          login-server: sampleappaoaichatgpt.azurecr.io
+          login-server: sjcopenaiwebappregistry.azurecr.io
           username: ${{ secrets.WEBAPP_ACR_USERNAME }}
           password: ${{ secrets.WEBAPP_ACR_PASSWORD }}
-      - name: Build the Docker image
-        run: docker build . --file WebApp.Dockerfile --tag sampleappaoaichatgpt.azurecr.io/sample-app-aoai-chatgpt:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
+      - name: Build and Push Docker Image
+        run: |
+          docker build . --file WebApp.Dockerfile --tag sjcopenaiwebappregistry.azurecr.io/sample-app-aoai-chatgpt:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
+          docker push sjcopenaiwebappregistry.azurecr.io/sample-app-aoai-chatgpt:$(date +'%Y-%m-%d')_$GITHUB_RUN_NUMBER
