--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 azure-identity==1.15.0
 Flask[async]==3.0.3
 openai==1.55.3
+azure-ai-inference[opentelemetry]==1.0.0b9
 azure-monitor-opentelemetry==1.6.4
 azure-search-documents==11.4.0b6
 azure-storage-blob==12.17.0
@@ -11,4 +12,5 @@ uvicorn==0.24.0
 aiohttp==3.9.2
 gunicorn==20.1.0
 pydantic-settings==2.2.1
+opentelemetry-sdk==1.30.0
 opentelemetry-instrumentation-asgi==0.51b0
