--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -19,6 +19,6 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token:                   ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "src"          # pasta do front-end
+          app_location: "frontend"          # pasta do front-end
           api_location: "api"          # pasta das Azure Functions
-          output_location: "build"     # pasta gerada pelo build (React → build; Vue → dist)
+          output_location: "dist"     # pasta gerada pelo build (React → build; Vue → dist)
