--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -1,16 +1,16 @@
+name: Azure Static Web Apps CI/CD
+
 on:
   push:
     branches:
-     - meu-chatbot
-     - main
-
+      - main
+      - meu-chatbot
 
 jobs:
   build_and_deploy_job:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Build And Deploy
         id: swa
@@ -19,6 +19,6 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           repo_token:                   ${{ secrets.GITHUB_TOKEN }}
           action: "upload"
-          app_location: "frontend"          # pasta do front-end
-          api_location: "api"          # pasta das Azure Functions
-          output_location: "dist"     # pasta gerada pelo build (React → build; Vue → dist)
+          app_location: "frontend"
+          api_location: ""       # ou "api" se você tiver Azure Functions
+          # output_location removido
