--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
-    "vite": "^4.1.5"
+    "vite": "^4.1.5",
+    "vite-plugin-radar": "^0.10.0"
   }
 }
